# nlw-operator-python-vision

./: README.md  pyproject.toml  webcam_detection.py  yolos_object_detection.ipynb
back-end_projeto/: collect_hand_data.py  gemini_vision.ipynb  gesture_model.pkl  mobilenet_classification.ipynb  pyproject.toml  train_gesture_model.py  webcam_detection.py
computer_vision_app/: .sesskey  app.py  app_streamlit.py  pyproject.toml
computer_vision_app/assets/: script.js  style.css
computer_vision_app/back-end_projeto/: hand_landmarks_dataset.csv
computer_vision_app/code/: __init__.py  image_utils.py
computer_vision_app/core/: config.py  gesture_processor.py  webcam_recog.py
